# ai-soc-agent

./: .env.example  .gitignore  Gemini.md  README.md  main.py  pyproject.toml  redshield_soc_instructions.md  test_models.py
backend/: __init__.py  config.py  fix_db.py  inject_scenario.py  main.py
backend/api/: __init__.py  alerts.py  auth.py  chat.py  wazuh.py
backend/auth/: auth.py  jwt_handler.py
backend/core/: __init__.py  ai_engine.py  ai_ranker.py  soc_memory.py  wazuh_ingest.py
backend/database/: db.py
backend/models/: alert_model.py
data/: sample_alerts.json
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: AI_Dashboard.jsx  App.jsx  index.css
frontend/src/api/: apiClient.js
frontend/src/components/: AlertFeed.jsx  AlertsListPage.jsx  AttackGraph.jsx  Login.jsx  PredictiveRiskWidget.jsx  SettingsDialog.jsx  SocCopilot.jsx  WarRoomPage.jsx
frontend/src/styles/: App.css
